fix the issue with pop-up & next piece not centered well when changing the width

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,7 +144,7 @@ body {
     align-self: flex-start;
     margin-top: 83px;
     background: var(--container-bg);
-    padding: 10px;
+    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px var(--shadow-color);
 }
